--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -7,6 +7,12 @@
       "command": "terraform-ls",
       "args": ["serve"],
       "filetypes": ["terraform"]
+    },
+    "haskell": {
+      "command": "haskell-language-server-wrapper",
+      "args": ["--lsp"],
+      "rootPatterns": ["*.cabal", "stack.yaml", "cabal.project", "package.yaml", "hie.yaml"],
+      "filetypes": ["haskell", "lhaskell"]
     }
   }
 }
